<resources>
    <string name="app_name">视频客服SDK</string>
    <string name="udesk_set_agent_info">设置客服信息</string>
    <string name="udesk_set_customer_info">设置客户信息</string>
    <string name="udesk_custom_channel">customChannel</string>
    <string name="udesk_agentId">agentId</string>
    <string name="udesk_agentGroupId">agentGroupId</string>
    <string name="udesk_nickName">nickName</string>
    <string name="udesk_avatar">avatar</string>
    <string name="udesk_email">email</string>
    <string name="udesk_level">level</string>
    <string name="udesk_call">呼叫</string>
    <string name="udesk_set_up">设置</string>
    <string name="udesk_set_useVoice">使用语音模式</string>
    <string name="udesk_get_history_message">查看消息记录</string>
    <string name="udesk_show_logo">是否显示logo</string>
    <string name="udesk_video_rotation">远程视频旋转</string>
    <string name="udesk_video_rotation_0">不旋转</string>
    <string name="udesk_video_rotation_90">旋转90度</string>
    <string name="udesk_video_rotation_180">旋转180度</string>
    <string name="udesk_video_rotation_270">旋转270度</string>
    <string name="udesk_video_fillmode">远程视频填充</string>
    <string name="udesk_video_fillmode_fill">填充模式</string>
    <string name="udesk_video_fillmode_fit">适应模式</string>
    <string name="udesk_noteInfo_customFields">设置业务记录字段</string>
    <string name="udesk_noteInfo_content">业务记录主题</string>
    <string name="udesk_noteInfo_customFields_text_key">管理员后台查看业务记录自定义TextField的key</string>
    <string name="udesk_set_text_value">key对应的value</string>
    <string name="udesk_noteInfo_customFields_select_key">管理员后台查看业务记录自定义SelectField的key</string>
    <string name="udesk_set_select_value">key对应的value,传角标值(逗号隔开)</string>
    <string name="udesk_show_zoom">是否使用缩放</string>
    <string name="udesk_show_screen_share">是否使用屏幕分享</string>
    <string name="udesk_customer_customfields">设置客户自定义字段</string>
    <string name="udesk_customer_customFields_text_key">管理员后台查看客户字段自定义TextField的key</string>
    <string name="udesk_customer_customFields_select_key">管理员后台查看客户字段自定义SelectField的key</string>
</resources>